# faaiz_robotsim

./: snapcraft.yaml  start_basic_sim.sh
Docs/: Notes.rst  (+1 more)
box_bot_description/: CMakeLists.txt  package.xml
box_bot_description/config/: box_bot_1_controller_position_velocity.yaml  box_bot_control.yaml  controller_position_velocity.yaml
box_bot_description/launch/: robot_state_publisher.launch.py  spawn.launch  spawn.launch.py
box_bot_description/meshes/: LICENSE.txt  README.txt  attribution_card.html  box_bot_3.dae  prop.stl
box_bot_description/robot/: box_bot.gazebo  box_bot.xacro  box_bot_body.xacro  box_bot_gen.urdf  box_bot_laser_control.xacro  box_bot_propeller.xacro  box_bot_slotcar.xacro  box_bot_with_meshes.xacro  caster_wheels.xacro  macros.xacro  properties.xacro  sensors.xacro  wheels.xacro
box_bot_description/rviz/: basic.rviz  box_bot.rviz
box_bot_description/urdf/: box_bot.urdf
box_bot_gazebo/: CMakeLists.txt  package.xml
box_bot_gazebo/docs/: usefull_commands.sh
box_bot_gazebo/launch/: box_bot_launch.py  keyboard_teleop.launch  main.launch  main.launch.xml  main_box_bot_1.launch.xml  main_box_bot_2.launch.xml  main_simple.launch.xml  main_slotcar.launch.xml  main_slotcar_test.launch.xml  move_laser.launch.py  publish_static_transform_odom_to_world.launch.py  put_robot_in_world.launch  robot_description_publisher.py  spawn.launch.xml  spawn_in_gazebo.launch.py  spawn_robot_ros2.launch.py  spawn_with_control.launch.xml  start_control.launch copy.py  start_control.launch.py  start_rviz.launch.py  start_rviz.launch.xml  start_world.launch  start_world.launch.py  start_world_launch.py  start_world_rmf.launch.py  start_world_rmf_test.launch.py  start_world_simple.launch.py  static_odom_to_world.launch.py
box_bot_gazebo/models/box_restaurant/: model.config  model.sdf
box_bot_gazebo/models/box_restaurant_routes/: model.config  model.sdf
box_bot_gazebo/models/box_room/: model.sdf
box_bot_gazebo/models/charging_station_1/: model.config  model.sdf
box_bot_gazebo/rviz/: basic.rviz  the_three_stoogers.rviz
box_bot_gazebo/scripts/: move_laser.py
box_bot_gazebo/worlds/: Waving_ex1.dae  box_bot_box_restaurant.world  box_bot_box_restaurant_routes.world  box_bot_box_restaurant_routes_basic.world  simple.world  tc_human_sit_wait.dae
(+20 files in other folders)
